--- a/pom.xml
+++ b/pom.xml
@@ -20,10 +20,16 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.qoomon</groupId>
+			<artifactId>gson-type-adapter</artifactId>
+			<version>1.0</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-elasticsearch</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.jongo</groupId>
 			<artifactId>jongo</artifactId>
@@ -43,7 +49,23 @@
 			<artifactId>jna</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>bson</artifactId>
+			<version>3.3.0</version>
+			<scope>compile</scope>
+		</dependency>
 
+		<dependency>
+			<groupId>net.vz.mongodb.jackson</groupId>
+			<artifactId>mongo-jackson-mapper</artifactId>
+			<version>1.4.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
